--- a/src/main/webapp/resources/css/general.css
+++ b/src/main/webapp/resources/css/general.css
@@ -6,3 +6,15 @@
 	width: 100%;
 	height: 300px;
 }
+
+#logo{
+	float:left;
+	margin-top:10px;
+}
+#cssmenu{
+	float:left;
+}
+
+#service{
+	top:10px;
+}
