--- a/src/main/webapp/resources/theme/menu/styles.css
+++ b/src/main/webapp/resources/theme/menu/styles.css
@@ -29,7 +29,7 @@
 }
 #cssmenu {
   font-family: Montserrat, sans-serif;
-  background: #333333;
+  background: #337AB7;
 }
 #cssmenu > ul > li {
   float: left;
@@ -53,7 +53,7 @@
   font-size: 12px;
   letter-spacing: 1px;
   text-decoration: none;
-  color: #dddddd;
+  color: white;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -131,9 +131,9 @@
   width: 170px;
   font-size: 12px;
   text-decoration: none;
-  color: #dddddd;
+  color: white;
   font-weight: 400;
-  background: #333333;
+  background: #337AB7;
 }
 #cssmenu ul ul li:last-child > a,
 #cssmenu ul ul li.last-item > a {
