--- a/src/main/webapp/resources/css/general.css
+++ b/src/main/webapp/resources/css/general.css
@@ -1,6 +1,3 @@
-body{
-	background-color: #EBEFF0;
-}
 .container{
 	background-color: white;
 }
@@ -40,7 +37,6 @@ body{
 	height:50px;
 }
 
-
 /* --------- Page de liste compétitions */
 
 .slider{
@@ -50,6 +46,6 @@ body{
 }
 
 .back_carousel{
-	background-color: black;
-	margin: auto;
+	width: 77%;
+	margin: 20px auto auto;
 }
