--- a/src/main/webapp/resources/css/general.css
+++ b/src/main/webapp/resources/css/general.css
@@ -1,9 +1,3 @@
-.images_robots{
-	max-width:900px;
-	max-height: 350px;
-	margin:auto;
-}
-
 /* ------------------------- general */
 
 body{
@@ -43,6 +37,10 @@ form{
 
 .invalid{
 	border-color: red !important;
+}
+#picture_robot{
+	width: 100% !important;
+	height: 100% !important;
 }
 /* ------------------------- connexion & inscription */
 #connexion{
@@ -95,3 +93,10 @@ form{
 	width: 77%;
 	margin: 20px auto auto;
 }
+
+.images_robots{
+	max-width:900px;
+	max-height: 280px;
+	margin:auto;
+}
+
